@@ -799,7 +799,7 @@ GF_EXPORT
 u32 gf_term_get_time_in_ms(GF_Terminal *term)
 {
 	if (!term || !term->root_scene) return 0;
-	if (term->root_scene->scene_codec) return gf_clock_time(term->root_scene->scene_codec->ck);
+	if (term->root_scene->scene_codec && term->root_scene->scene_codec->ck) return gf_clock_time(term->root_scene->scene_codec->ck);
 	else if (term->root_scene->dyn_ck) return gf_clock_time(term->root_scene->dyn_ck);
 	return 0;
 }
